fixes overlapping on smaller screens

--- a/src/App/Splash/Splash.scss
+++ b/src/App/Splash/Splash.scss
@@ -1,7 +1,9 @@
 @import '../../styles.scss';
 
 .splash {
-    height: 100vh;
+    @media screen and (min-width: 1280px) {
+        height: 100vh;
+    }
 }
 
 .body-container {
